refactorizacion de modulo users finalizado